--- a/.github/workflows/pr-main.yaml
+++ b/.github/workflows/pr-main.yaml
@@ -22,43 +22,42 @@ jobs:
         id: cache
         uses: actions/cache@v2
         with:
-          path: |
-            ~/bin
+          path: bin
           key: ${{ runner.os }}-${{ env.HELM_VERSION }}-${{ env.YQ_VERSION }}
-      - name: Download tools if needed
+      - name: Checkout
+        uses: actions/checkout@v2
         if: steps.cache.outputs.cache-hit != 'true'
-        run: |
-          mkdir $HOME/bin
-          curl -L https://get.helm.sh/helm-v$HELM_VERSION-linux-amd64.tar.gz | \
-            tar -xvzf - --strip-components 1 --directory $HOME/bin/ linux-amd64/helm
-          
-          curl -L https://github.com/mikefarah/yq/releases/download/$YQ_VERSION/yq_linux_amd64 > $HOME/bin/yq
-          chmod +x $HOME/bin/yq
+      - run: scripts/install-helm.sh $HELM_VERSION
+        if: steps.cache.outputs.cache-hit != 'true'
+      - run: scripts/install-yq.sh $YQ_VERSION
+        if: steps.cache.outputs.cache-hit != 'true'
       - name: Update PATH
         run: |
-          echo "$HOME/bin" >> $GITHUB_PATH
-      - name: Validate tool versions
-        run: |
-          helm version
-          yq -V
+          echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
   
   lint-check:
     needs:
       - setup
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Cache bin path
         id: cache
         uses: actions/cache@v2
         with:
-          path: |
-            ~/bin
-          key: ${{ runner.os }}-${{ needs.setup.outputs.HELM_VERSION }}-${{ needs.setup.outputs.YQ_VERSION }}
+          path: bin
+          key: ${{ runner.os }}-${{ env.HELM_VERSION }}-${{ env.YQ_VERSION }}
+      - name: Checkout
+        uses: actions/checkout@v2
+      - run: scripts/install-helm.sh $HELM_VERSION
+        if: steps.cache.outputs.cache-hit != 'true'
+      - run: scripts/install-yq.sh $YQ_VERSION
+        if: steps.cache.outputs.cache-hit != 'true'
       - name: Update PATH
         run: |
-          echo "$HOME/bin" >> $GITHUB_PATH
+          echo "$GITHUB_WORKSPACE/bin" >> $GITHUB_PATH
+      - name: Update chart dependencies
+        run: |
+          scripts/update-helm-deps.sh
       - name: Setup working directory
         run: |
           mkdir build
@@ -88,14 +87,17 @@ jobs:
         with:
           go-version: ^1.15
         id: go
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - name: Update chart dependencies
+        run: |
+          scripts/update-helm-deps.sh
       - name: Run unit tests
         run: |
           export PATH=$GOROOT/bin:$GOPATH/bin:$PATH
